primeros cambios sitio MiProyecto1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba HTML5</title>
-    <h2>Hola amigos esto es una prueba</h2>
+    <h2>Hola amigos esto es una prueba 2, estamos en vivo en clases.Se regresco en GITHUB</h2>
 </head>
 <body>
     
